dataset1235/2025-2/1379599236/users/2648842661/executions/2277843042_704983377.log
== SUBMISSION (2025-08-20 18:56:41)
-- CODE: 
 #Leitura dos dois números inteiros
x = int (input("informe um numero:"))
y = int(input("informe um numero:"))

divisao_inteira = x//y
resto_da_divisao = x%y
divisao_real = x/y
produto = x*y
potencia = x**y

print(divisao_inteira)
print(resto_da_divisao)
print(divisao_inteira)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
196
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
32768
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
100000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
2809
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
119716
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
120409
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 20:20:32)
-- CODE: 
 #leitura distinta dos valores de x e y
x = int(input())
y = int(input())

#conferindo o as operacoes
# 1. quociente do numero inteiro
print(x//y)

#2. resto divisao
print(x%y)

#3. quociente do real
 print(x/y)

#produto  multiplicacao
print(x*y)

#produto de potencia
print(x**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 13
    print(x/y)
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 13
    print(x/y)
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 13
    print(x/y)
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 13
    print(x/y)
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 13
    print(x/y)
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 13
    print(x/y)
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 19:46:59)
-- CODE: 
 #Leitura dos dois números inteiros
x = int (input("informe um numero:"))
y = int(input("informe um numero:"))

divisao_inteira = x//y
resto_da_divisao = x%y
divisao_real = x/y
produto = x*y
potencia = x**y

print(divisao_inteira)
print(resto_da_divisao)
print(divisao_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
196
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
32768
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
100000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
2809
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
119716
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
120409
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 20:43:20)
-- CODE: 
 #leitura distinta dos valores de x e y
x = int(input())
y = int(input())

#operacoes 
print("1.Quociente da divisao inteiro:")
print(x//y)

print("2.resto da divisao inteira:")
print(x%y)

print("3.quociente da divisao real:")
print(rond(x/y , 2))

print("4. o produto de x vezes y:")
print(x*y)

print("5.o valor de y elevado a terceira potencia:")
print(x**3)



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 18:45:19)
-- CODE: 
 #Leitura dos dois números inteiros
x = int (input("informe um numero:"))
y = int(input("informe um numero:"))

divisao_inteira = x//y
resto_da_divisao = x%y
divisao_real = x/y
produto = x*y
potencia = x**y

print(divisao_inteira )
print(resto_da_divisao)
print(divisao_inteira)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
196
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
32768
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
100000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
2809
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
119716
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
120409
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 21:01:30)
-- CODE: 
 #Leitura dos dois números inteiros
x = int(input())
y = int(input())

print("1. Quociente da divisão inteira;")
print(x//y)

print("2. Resto da divisão  inteira.")
print(x%y)

print("3. Quociente da divisão real")
divisao_real = x/y 
# Garante que terá sempre duas casas decimais
if divisao_real == int(divisao_real):
  print(str(divisao_real")divisao_real  + "0"
else 
print(round(x/y , 2))
print(round (divisao_real, 2)) 

print("4.O produto de x vezes y; e")
print(x*y)

print("5.O valor de y elevado a terceira potência.")
print(x**3)



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 15
    print(str(divisao_real")divisao_real  + "0"
                                              ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 15
    print(str(divisao_real")divisao_real  + "0"
                                              ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 15
    print(str(divisao_real")divisao_real  + "0"
                                              ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 15
    print(str(divisao_real")divisao_real  + "0"
                                              ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 15
    print(str(divisao_real")divisao_real  + "0"
                                              ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 15
    print(str(divisao_real")divisao_real  + "0"
                                              ^
SyntaxError: unterminated string literal (detected at line 15)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 18:56:06)
-- CODE: 
 #Leitura dos dois números inteiros
x = int (input("informe um numero:"))
y = int(input("informe um numero:"))

divisao_inteira = x//y
resto_da_divisao = x%y
divisao_real = x/y
produto = x*y
potencia = x**y

print(divisao_inteira )
print(resto_da_divisao)
print(divisao_inteira)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
196
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
32768
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
100000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
2809
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
119716
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
120409
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 19:49:11)
-- CODE: 
 #Leitura dos dois números inteiros
x = int (input("informe um numero:"))
y = int(input("informe um numero:"))

divisao_inteira = x//y
resto_da_divisao = x%y
divisao_real= x/y
produto = x*y
potencia = y**3

print(divisao_inteira)
print(resto_da_divisao)
print(divisao_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 20:43:19)
-- CODE: 
 #leitura distinta dos valores de x e y
x = int(input())
y = int(input())

#operacoes 
print("1.Quociente da divisao inteiro:")
print(x//y)

print("2.resto da divisao inteira:")
print(x%y)

print("3.quociente da divisao real:")
print(rond(x/y , 2))

print("4. o produto de x vezes y:")
print(x*y)

print("5.o valor de y elevado a terceira potencia:")
print(x**3)



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 20:24:43)
-- CODE: 
 #leitura distinta dos valores de x e y
x = int(input())
y = int(input())

#conferindo o as operacoes
# 1. quociente do numero inteiro
print(x//y)

#2. resto divisao
print(x%y)

#3. quociente do real
 print(f"{x/y : .2f})

#produto  multiplicacao
print(x*y)

#produto de potencia
print(x**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 13
    print(f"{x/y : .2f})
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 13
    print(f"{x/y : .2f})
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 13
    print(f"{x/y : .2f})
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 13
    print(f"{x/y : .2f})
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 13
    print(f"{x/y : .2f})
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 13
    print(f"{x/y : .2f})
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 20:43:21)
-- CODE: 
 #leitura distinta dos valores de x e y
x = int(input())
y = int(input())

#operacoes 
print("1.Quociente da divisao inteiro:")
print(x//y)

print("2.resto da divisao inteira:")
print(x%y)

print("3.quociente da divisao real:")
print(rond(x/y , 2))

print("4. o produto de x vezes y:")
print(x*y)

print("5.o valor de y elevado a terceira potencia:")
print(x**3)



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(rond(x/y , 2))
          ^^^^
NameError: name 'rond' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 20:51:52)
-- CODE: 
 #leitura distinta dos valores de x e y
x = int(input())
y = int(input())

#operacoes 
print("1.Quociente da divisão inteira;")
print(x//y)

print("2.Resto da divisão  inteira.")
print(x%y)

print("3.Quociente da divisão real")
print(round(x/y , 2))

print("4.O produto de x vezes y; e")
print(x*y)

print("5.O valor de y elevado a terceira potência.")
print(x**3)



-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
2744
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
512
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
1000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
148877
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
41421736
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
41781923
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 20:48:36)
-- CODE: 
 #leitura distinta dos valores de x e y
x = int(input())
y = int(input())

#operacoes 
print("1.Quociente da divisão inteira:")
print(x//y)

print("2.Resto da divisão  inteira:")
print(x%y)

print("3.Quociente da divisão real:")
print(round(x/y , 2))

print("4.O produto de x vezes y:")
print(x*y)

print("5.O valor de y elevado a terceira potência:")
print(x**3)



-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
2744
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
512
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
1000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
148877
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
41421736
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
41781923
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 20:47:48)
-- CODE: 
 #leitura distinta dos valores de x e y
x = int(input())
y = int(input())

#operacoes 
print("1.Quociente da divisão inteira:")
print(x//y)

print("2.Resto da divisão  inteira:")
print(x%y)

print("3.Quociente da divisão real:")
print(round(x/y , 2))

print("4.O produto de x vezes y:")
print(x*y)

print("5.o valor de y elevado a terceira potencia:")
print(x**3)



-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
2744
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
512
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
1000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
148877
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
41421736
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
41781923
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
